# EcoAction-AI-Backend-v01

./: .env.example  .gitignore  README.md  app.py  index.html  package.json  packages.txt  pyproject.toml  requirements.txt  requirements_optimized.txt
agent/: __init__.py  agents.py  crew.py  models.py  tasks.py  tools.py  utils.py
config/: __init__.py  settings.py
data/: challenges_metadata.json
data_model/: auth.py  auth_improved.py  data_merge_json.py  database.py  supabase_client.py  validators.py
pages/: 1_auth.py  2_onboarding.py  3_dashboard.py
research_notebooks/: nb_1.ipynb
src/: App.vue  main.js  style.css
src/components/: ChallengeCard.vue  LoadingSpinner.vue  Navbar.vue
src/router/: index.js
src/stores/: auth.js  dashboard.js
src/views/: Auth.vue  Dashboard.vue  Home.vue  Onboarding.vue
tests/: conftest.py  debug_json.py  get_test_users.py  run_agent_2.py  run_agent_3.py  test-file-3.json  test_actual_data.py  test_agent3_validation.py  test_agent_1.py  test_agent_2.py  test_agent_3.py  test_auth.py  test_challenge_display.py  test_db_debug.py  test_dict_validation.py  test_feedback_system.py  test_file_4.json  test_get_agent_results.py  test_onboarding_flow.py  test_task_completion_fix.py
